force-app/main/default/objects/int_gecart__c/int_gecart__c.object-meta.xml
<CustomObject>
    <label>int_gecart</label>
    <nameField>
        <label>Nom de int_gecart</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>int_gecart</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>