force-app/main/default/objects/int_gecart__c/fields/NB_heures__c.field-meta.xml
<CustomField>
    <fullName>NB_heures__c</fullName>
    <label>NB_heures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>