force-app/main/default/objects/int_gecart__c/fields/PRC__c.field-meta.xml
<CustomField>
    <fullName>PRC__c</fullName>
    <label>PRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>