force-app/main/default/objects/int_gecart__c/fields/PRI__c.field-meta.xml
<CustomField>
    <fullName>PRI__c</fullName>
    <label>PRI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>