force-app/main/default/objects/int_gecart__c/fields/sous_chapitre__c.field-meta.xml
<CustomField>
    <fullName>sous_chapitre__c</fullName>
    <label>sous_chapitre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>