force-app/main/default/objects/int_gecart__c/fields/Type_de_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense__c</fullName>
    <label>Type_de_depense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>